--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "expo": "^30.0.1",
     "prop-types": "^15.6.2",
     "react": "16.3.1",
+    "react-devtools": "^3.4.2",
     "react-native": "https://github.com/expo/react-native/archive/sdk-30.0.0.tar.gz"
   }
 }
